--- a/new_pages/data_table.qmd
+++ b/new_pages/data_table.qmd
@@ -14,12 +14,12 @@ The structure is **DT[i, j, by]**, separated by 3 parts; the **i, j** and **by**
   
 This page will address the following topics:  
 
-* Importing data and use of `fread()` and `fwrite()`.
-* Selecting and filtering rows using the **i** argument.
-* Using helper functions `%like%`, `%chin%`, `%between%`. 
-* Selecting and computing on columns using the **j** argument.
-* Computing by groups using the **by** argument.
-* Adding and updating data to data tables using `:=`.
+* Importing data and use of `fread()` and `fwrite()`
+* Selecting and filtering rows using the **i** argument
+* Using helper functions `%like%`, `%chin%`, `%between%` 
+* Selecting and computing on columns using the **j** argument
+* Computing by groups using the **by** argument
+* Adding and updating data to data tables using `:=`
 
 <!-- ======================================================= -->
 ## Load packages and import data { }
@@ -95,9 +95,9 @@ Data table uses helper functions that make subsetting rows easy. The `%like%` fu
 
 In the following examples we:
 
-*  Filter rows where the hospital variable contains “Hospital”.
-*  Filter rows where the outcome is “Recover” or “Death”.
-*  Filter rows in the age range 40-60.
+*  Filter rows where the hospital variable contains “Hospital”
+*  Filter rows where the outcome is “Recover” or “Death”
+*  Filter rows in the age range 40-60
 
 ```{r, eval=F}
 linelist[hospital %like% "Hospital"] #filter rows where the hospital variable contains “Hospital”
@@ -152,9 +152,9 @@ The **by** argument is the third argument in the **DT[i, j, by]** structure. The
 
 In the following examples we:	
 
-* group the number of cases by hospital.
-* in cases 18 years old or over, calculate the mean height and weight of cases according to gender and whether they recovered or died.
-* in admissions that lasted over 7 days, count the number of cases according to the month they were admitted and the hospital they were admitted to.
+* group the number of cases by hospital
+* in cases 18 years old or over, calculate the mean height and weight of cases according to gender and whether they recovered or died
+* in admissions that lasted over 7 days, count the number of cases according to the month they were admitted and the hospital they were admitted to
 
 
 ```{r}
