--- a/new_pages/data_used.qmd
+++ b/new_pages/data_used.qmd
@@ -194,7 +194,7 @@ The [Contact Tracing](contact_tracing.qmd) page demonstrated analysis of contact
 </a>
 
 
-<span style="color: black;">**_NOTE:_** Structured contact tracing data from other software (e.g. KoBo, DHIS2 Tracker, CommCare) may look different. If you would like to contribute alternative sample data or content for this page, please [contact us](https://epirhandbook.com/#r-for-applied-epidemiology-and-public-health).</span> 
+<span style="color: black;">**_NOTE:_** Structured contact tracing data from other software (e.g. KoBo, DHIS2 Tracker, CommCare) may look different. If you would like to contribute alternative sample data or content for this page, please [contact us](index.qmd).</span> 
 
 <span style="color: darkgreen;">**_TIP:_** If you are deploying Go.Data and want to connect to your instance's API, see the Import and export page [(API section)](#import_api) and the [Go.Data Community of Practice](https://worldhealthorganization.github.io/godata/).</span>
 
