--- a/new_pages/diagrams.qmd
+++ b/new_pages/diagrams.qmd
@@ -11,9 +11,9 @@ knitr::include_graphics(here::here("images", "sankey_diagram.png"))
 
 This page covers code to produce:  
 
-* Flow diagrams using **DiagrammeR** and the DOT language.  
-* Alluvial/Sankey diagrams.  
-* Event timelines.  
+* Flow diagrams using **DiagrammeR** and the DOT language
+* Alluvial/Sankey diagrams
+* Event timelines
 
 <!-- * DAGs (Directed Acyclic Graphs)   -->
 <!-- * GANTT charts   -->
@@ -68,12 +68,12 @@ The function `grViz()` is used to create a "Graphviz" diagram. This function acc
 
 **Basic structure**  
 
-1) Open the instructions `grViz("`.  
-2) Specify directionality and name of the graph, and open brackets, e.g. `digraph my_flow_chart {`.
-3) Graph statement (layout, rank direction).  
-4) Nodes statements (create nodes).
-5) Edges statements (gives links between nodes).  
-6) Close the instructions `}")`.  
+1) Open the instructions `grViz("`
+2) Specify directionality and name of the graph, and open brackets, e.g. `digraph my_flow_chart {`
+3) Graph statement (layout, rank direction)
+4) Nodes statements (create nodes)
+5) Edges statements (gives links between nodes)
+6) Close the instructions `}")`
 
 ### Simple examples {.unnumbered} 
 
