--- a/new_pages/quarto.qmd
+++ b/new_pages/quarto.qmd
@@ -25,7 +25,7 @@ As the overall philosophy and syntax of Quarto is nearly identical to that of R 
 
 ## Why Quarto over R Markdown?
 
-Quarto provides the flexibility and automation that R Markdown pioneered, with a more powerful underlying flexibility that streamlines a lot of the sharing and publishing processes of your work! While R Markdown is tied to R, Quarto documents allow you to use a number of different programming languages such as R, Python, Javascript and Julia. This means that if you are working with people writing in several different coding languages, they can all use the same document to carry out their analysis.
+Quarto provides the flexibility and automation that R Markdown pioneered, with a more powerful underlying flexibility that streamlines a lot of the sharing and publishing processes of your work! While R Markdown is tied to R, Quarto documents allow you to use a number of different programming languages such as R, Python, Javascript and Julia. While R Markdown [can do this](https://bookdown.org/yihui/rmarkdown/language-engines.html), the approach is less straightforward. By streamlining the inclusion of multiple programming languages, it makes collaborating across different people and groups, easier if multiple approaches are used.
 
 Even if you are only working in R, Quarto has several advantages. Rather than relying on individual packages to create different outputs, Quarto handles this all internally. To produce a website, PowerPoint slides, or a html report, rather than using external packages, Quarto has this functionality inbuilt. This means you have fewer packages to update, and if one of the packages is no longer maintained, you don't need to change your approach to maintain the same output.
 
