--- a/new_pages/collaboration.qmd
+++ b/new_pages/collaboration.qmd
@@ -671,7 +671,7 @@ you were working on.
 *PULL* - First, click the "Pull" icon (downward arrow) which fetches and
 pulls at the same time.
 
-*PUSH* - Clicking the green "Pull" icon (upward arrow). You may be asked
+*PUSH* - Clicking the green "Push" icon (upward arrow). You may be asked
 to enter your Github username and password. The first time you are
 asked, you may need to enter two Git command lines into the *Terminal*:
 
