--- a/new_pages/combination_analysis.qmd
+++ b/new_pages/combination_analysis.qmd
@@ -49,9 +49,9 @@ This analysis plots the frequency of different **combinations** of values/respon
 
 This analysis is also often called:  
 
-* **"Multiple response analysis"**.  
-* **"Sets analysis"**.  
-* **"Combinations analysis"**.  
+* **"Multiple response analysis"**
+* **"Sets analysis"**
+* **"Combinations analysis"** 
 
 In the example plot above, five symptoms are shown. Below each vertical bar is a line and dots indicating the combination of symptoms reflected by the bar above. To the right, horizontal bars reflect the frequency of each individual symptom.  
 
@@ -73,9 +73,12 @@ This code chunk shows the loading of packages required for the analyses. In this
 
 ```{r, warning=F, message=F}
 pacman::p_load(
+  rio,           # for importing data
+  here,          # for relative filepaths
   tidyverse,     # data management and visualization
   UpSetR,        # special package for combination plots
-  ggupset)       # special package for combination plots
+  ggupset        # special package for combination plots
+  )       
 ```
 
 <!-- ======================================================= -->
