--- a/new_pages/help.qmd
+++ b/new_pages/help.qmd
@@ -40,9 +40,9 @@ To read more advanced materials about handling issues in your own Github reposit
 
 Providing a reproducible example ("reprex") is key to getting help when posting in a forum or in a Github issue. People want to help you, but you have to give them an example that they can work with on their own computer. The example should:  
 
-* Demonstrate the problem you encountered.  
-* Be *minimal*, in that it includes only the data and code required to reproduce your problem.  
-* Be *reproducible*, such that all objects (e.g. data), package calls (e.g. `library()` or `p_load()`) are included.
+* Demonstrate the problem you encountered  
+* Be *minimal*, in that it includes only the data and code required to reproduce your problem
+* Be *reproducible*, such that all objects (e.g. data), package calls (e.g. `library()` or `p_load()`) are included
 
 *Also, be sure you do not post any sensitive data with the reprex!* You can create example data frames, or use one of the data frames built into R (enter `data()` to open a list of these datasets).  
 
@@ -100,9 +100,9 @@ knitr::include_graphics(here::here("images", "errors_reprex_RStudio1.png"))
 ```
 
 
-* If you set `session_info = TRUE` the output of `sessioninfo::session_info()` with your R and R package versions will be included.  
-* You can provide a working directory to `wd = `.  
-* You can read more about the arguments and possible variations at the [documentation](https://reprex.tidyverse.org/) or by entering `?reprex`.
+* If you set `session_info = TRUE` the output of `sessioninfo::session_info()` with your R and R package versions will be included
+* You can provide a working directory to `wd = `
+* You can read more about the arguments and possible variations at the [documentation](https://reprex.tidyverse.org/) or by entering `?reprex`
 
 In the example above, the `ggplot()` command did not run because the argument `date_format =` is not correct - it should be `date_labels = `.  
 
@@ -129,9 +129,11 @@ linelist_data <- data.frame(
 
 You can imagine that this would be very sensitive information, and it would not be appropriate (or even legal!) to share this information. To anonymise the data you could think about removing columns that are not necessary for the analysis, but are identifying. For instance you could:
 
-* Replace `first_name` and `last_name` with an `id` column, that uses the rownumber.
-* Recode the `location` column so that it is not apparent where they were located.
-* Change the outcome to a binary value, to avoid disclosing their condition.
+* Replace `first_name` and `last_name` with an `id` column, that uses the rownumber
+* Recode the `location` column so that it is not apparent where they were located
+* Change the outcome to a binary value, to avoid disclosing their condition
+
+We will be using the inbuilt vector `LETTERS`. This is the alphabet in capital letters, and is automatically part of your environment when you open R.
 
 ```{r}
 
@@ -174,15 +176,15 @@ In order to make it as easy as possible for others to understand and help you, y
 
 3) Write your question:  
 
-* Introduce your situation and problem.  
-* Link to posts of similar issues and explain how they do not answer your question.  
-* Include any relevant information to help someone who does not know the context of your work.  
-* Give a minimal reproducible example with your R session information.  
-* Use proper spelling, grammar, punctuation, and break your question into paragraphs so that it is easier to read.  
+* Introduce your situation and problem
+* Link to posts of similar issues and explain how they do not answer your question  
+* Include any relevant information to help someone who does not know the context of your work
+* Give a minimal reproducible example with your R session information
+* Use proper spelling, grammar, punctuation, and break your question into paragraphs so that it is easier to read
 
-4) Monitor your question once posted to respond to any requests for clarification. Be courteous and gracious - often the people answering are volunteering their time to help you. If you have a follow-up question consider whether it should be a separate posted question.  
+4) Monitor your question once posted to respond to any requests for clarification. Be courteous and gracious - often the people answering are volunteering their time to help you. If you have a follow-up question consider whether it should be a separate posted question 
 
-5) Mark the question as answered, *if* you get an answer that meets the *original* request. This helps others later quickly recognize the solution.  
+5) Mark the question as answered, *if* you get an answer that meets the *original* request. This helps others later quickly recognize the solution  
 
 
 Read these posts about [how to ask a good question](https://stackoverflow.com/help/how-to-ask) the [Stack overflow code of conduct](https://stackoverflow.com/conduct), and the [Applied Epi Community post on "How to make a reproducible R code example"](https://community.appliedepi.org/t/how-to-make-a-reproducible-r-code-example/167).
